# kreate-kube

./: .gitignore  LICENSE  README.md  all-tests.sh  demo.py  pyproject.toml  requirements.txt  test.py  venv-setup.inc
doc/: TLDR.md  TODO.md  design.md  environment-vars.md  example-application.md  example-framework.md  framework.md  git-pipeline-choices.md  history.md  jinja-templates.md  recommend-framework.md  script.md  setting-defaults.md  summary.md  using-python-venv-pip.md  versions.md  whitespace-formatting-guidelines.md
framework/: define-commands.konf  init-app.konf  init-kreate-kube-framework.konf  install-dev-packages.inc  requirements-dev.txt  venv-setup.inc
framework/repos/: repo-kreate-kube-framework.konf  repo-kreate-kube-templates.konf  repo-shared-konfig.konf
kreate/: App.py  Base.py  Deployment.py  Environment.py  Ingress.py  __init__.py  app.py  base.py  cli.py  cont.py  deployment.py  deployment.yaml  environment.py  ingress.py  ingress.yaml  kust.py  kustomization.yaml  patches.py  resources.py  wrapper.py
kreate/file/: __init__.py  deployment.py
kreate/kore/: __init__.py  _app.py  _cli.py  _core.py  _jinja_app.py  _jinyaml.py  _komp.py  _konfig.py  _kontext.py  _kore.py  _korecli.py  _repo.py  deepchain.py  dotenv.py  trace.py
kreate/krypt/: __init__.py  _krypt.py  _kryptcli.py  krypt_functions.py
kreate/kube/: __init__.py  __main__.py  _kube.py  _kubecli.py  _kubeconfig.py  _kust.py  kube-defaults.konf  patch.py  resource.py  vardiff.py
kreate/templates/: ConfigMap.yaml  Deployment.yaml  Ingress.yaml  Kustomization.yaml  deployment.yaml  kustomization.yaml  patch-http-probes.yaml  poddisruptionbudget.yaml
src/kreate/: __init__.py  __main__.py  _app.py  _cli.py  _core.py  _jinyaml.py  _komp.py  _krypt.py  _kube.py  _kust.py  app.py  base.py  cli.py  core.py  jinyaml.py  kust.py  patches.py  resources.py  wrapper.py  yaml.py
templates/: README.md
templates/doc/: Deployment.md  Ingress.md
templates/kubeconfig/: kreate-kubeconfig.konf
templates/kubernetes/: Deployment.yaml  SecretBasicAuth.yaml  Service.yaml
templates/kustomize/: AntiAffinity.yaml  EgressLabels.yaml  HttpProbes.yaml  Kustomization.yaml  VolumeMounts.yaml
test/: config-demo.yaml  demo.py  vars-demo.yaml
tests/: demo.py  test-merge.py
tests/clean/: appdef.yaml  demo-strukt.yaml  test-demo-dev.out
tests/config/: config-xyz-dev.yaml  demo-app-structure.yaml  kreate-xyz.py  xyz-strukture.yaml
tests/demo/: appdef.yaml  demo-strukture.yaml  expected-output-demo-dev.out  framework.konf  konfig.yaml  kreate-demo-from-script.py  kreate-demo-from-strukt.py  (+5 more)
(+178 files in other folders)
